--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -22,12 +29,12 @@
         >
 
         <ul class="header-nav list">
-          <li>
+          <li class="header-nav-item">
             <a class="header-nav-link link" href="./index.html" target="_self"
               >Студия</a
             >
           </li>
-          <li>
+          <li class="header-nav-item">
             <a
               class="header-nav-link link"
               href="./portfolio.html"
@@ -35,17 +42,19 @@
               >Портфолио</a
             >
           </li>
-          <li><a class="header-nav-link link" href="">Контакты</a></li>
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
 
       <ul class="header-contact list">
-        <li>
+        <li class="header-contact-item">
           <a class="header-contact-link link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="header-contact-item">
           <a class="header-contact-link link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
@@ -56,7 +65,7 @@
     <main>
       <section class="portfolio">
         <!--Скрыла название заголовка секции с помощью hidden-->
-        <h2 class="portfolio-h" hidden>Примеры наших работ</h2>
+        <h1 class="portfolio-headline" hidden>Примеры наших работ</h1>
         <ul class="portfolio-list list">
           <li><button class="portfolio-button" type="button">Все</button></li>
           <li>
@@ -83,7 +92,7 @@
                 alt="Открытый ноутбук с тремя картинками людей"
                 width="370"
               />
-              <h3 class="cards-h">Технокряк</h3>
+              <h2 class="cards-headline">Технокряк</h2>
               <p class="cards-text">Веб-сайт</p>
             </a>
           </li>
@@ -95,9 +104,9 @@
                 alt="Два баскетболиста в прыжке с мячом"
                 width="370"
               />
-              <h3 class="cards-h">
+              <h2 class="cards-headline">
                 Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h3>
+              </h2>
               <p class="cards-text">Дизайн</p>
             </a>
           </li>
@@ -109,7 +118,9 @@
                 alt="Название ресторана на фоне акулы"
                 width="370"
               />
-              <h3 class="cards-h">Ресторан <span lang="en">Seafood</span></h3>
+              <h2 class="cards-headline">
+                Ресторан <span lang="en">Seafood</span>
+              </h2>
               <p class="cards-text">Приложение</p>
             </a>
           </li>
@@ -121,7 +132,9 @@
                 alt="Черные большие наушники"
                 width="370"
               />
-              <h3 class="cards-h">Проект <span lang="en">Prime</span></h3>
+              <h2 class="cards-headline">
+                Проект <span lang="en">Prime</span>
+              </h2>
               <p class="cards-text">Маркетинг</p>
             </a>
           </li>
@@ -133,7 +146,9 @@
                 alt="<Белый большой бокс и коричневый бокс поменьше>"
                 width="370"
               />
-              <h3 class="cards-h">Проект <span lang="en">Boxes</span></h3>
+              <h2 class="cards-headline">
+                Проект <span lang="en">Boxes</span>
+              </h2>
               <p class="cards-text">Приложение</p>
             </a>
           </li>
@@ -145,9 +160,9 @@
                 alt="<Большой моноблок с изображением карт на экране>"
                 width="370"
               />
-              <h3 class="cards-h">
+              <h2 class="cards-headline">
                 <span lang="en">Inspiration has no Borders</span>
-              </h3>
+              </h2>
               <p class="cards-text">Веб-сайт</p>
             </a>
           </li>
@@ -159,9 +174,9 @@
                 alt="Открытый глянцевый журнал"
                 width="370"
               />
-              <h3 class="cards-h">
+              <h2 class="cards-headline">
                 Издание <span lang="en">Limited Edition</span>
-              </h3>
+              </h2>
               <p class="cards-text">Дизайн</p>
             </a>
           </li>
@@ -173,7 +188,7 @@
                 alt="Бирка с рекламой"
                 width="370"
               />
-              <h3 class="cards-h">Проект <span lang="en">LAB</span></h3>
+              <h2 class="cards-headline">Проект <span lang="en">LAB</span></h2>
               <p class="cards-text">Маркетинг</p></a
             >
           </li>
@@ -185,7 +200,9 @@
                 alt="Открытый ноутбук, на нем печатают"
                 width="370"
               />
-              <h3 class="cards-h"><span lang="en">Growing Business</span></h3>
+              <h2 class="cards-headline">
+                <span lang="en">Growing Business</span>
+              </h2>
               <p class="cards-text">Приложение</p>
             </a>
           </li>
