normalize& active-page-name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         >
 
         <ul class="header-nav list">
-          <li><a class="header-nav-link link" href="">Студия</a></li>
+          <li>
+            <a class="header-nav-link link header-nav-activ" href="">Студия</a>
+          </li>
           <li>
             <a
               class="header-nav-link link"
