--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
           </li>
           <li class="header-nav-item">
             <a
-              class="header-nav-link link"
+              class="header-nav-link link header-nav-activ"
               href="./portfolio.html"
               target="_self"
               >Портфолио</a
