--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="header">
-      <nav>
+  
+  <header class="header">
+    <div class="conteiner header-container"> 
+      <nav class="header-navigation">
         <a href="/" class="logo link"
           >Web<span class="header-logo-accent">Studio</span></a
         >
 
         <ul class="header-nav list">
-          <li>
+          <li class="header-item">
             <a class="header-nav-link link header-nav-activ" href="">Студия</a>
           </li>
-          <li>
+          <li class="header-item">
             <a
               class="header-nav-link link"
               href="./portfolio.html"
@@ -40,39 +42,45 @@
               >Портфолио</a
             >
           </li>
-          <li><a class="header-nav-link link" href="">Контакты</a></li>
+          <li class="header-item"><a class="header-nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-
+      <!-- Авторизация -->
+      
       <ul class="header-contact list">
-        <li>
+        <li class="header-contact-item">
           <a class="header-contact-link link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="header-contact-item">
           <a class="header-contact-link link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
       </ul>
-    </header>
+    
+    </div>
+  </header>
+  
 
     <main>
       <!--Эффективные решения для вашего бизнеса-->
+     <div class="conteiner">
       <section class="hero">
-        <h1 class="hero-title">
+        <h1 class="hero-title section-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
+     </div>
 
       <!--Внимание к деталям\Пунктуальность\Планирование\Современные технологии
         Наши преимущества\-->
       <section class="benefits">
         <!--Скрыла название заголовка секции с помощью hidden-->
-        <h2 class="benefits-h" hidden>Наши преимущества</h2>
+        <h2 class="benefits-title section-title visually-hidden">Наши преимущества</h2>
 
         <ul class="benefits-list list">
           <li class="benefits-item">
@@ -108,7 +116,7 @@
 
       <!--Чем мы занимаемся-->
       <section class="work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
+        <h2 class="work-title section-title">Чем мы занимаемся</h2>
         <ul class="work-list list">
           <li>
             <img
@@ -135,7 +143,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="employees">
+      <section class="employees section-title">
         <h2 class="employees-title">Наша команда</h2>
 
         <ul class="employees-list list">
