--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Шапка-->
+    <!--HEADER-->
     <header class="header">
       <nav>
         <a href="/" class="logo link"
@@ -64,6 +64,7 @@
 
     <main>
       <section class="portfolio">
+        
         <!--Скрыла название заголовка секции с помощью hidden-->
         <h1 class="portfolio-headline" hidden>Примеры наших работ</h1>
         <ul class="portfolio-list list">
