--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
 
       <!--Чем мы занимаемся-->
       <section class="work">
-        <h2 class="work-title section-title">Чем мы занимаемся</h2>
-        <ul class="work-list list">
+        <div class="conteiner">
+         <h2 class="work-title section-title">Чем мы занимаемся</h2>
+         <ul class="work-list list">
           <li>
             <img
               src="./images/sevicepc.jpg"
@@ -143,14 +144,16 @@
               width="370"
             />
           </li>
-        </ul>
+         </ul>
+      </div>
       </section>
 
       <!--Наша команда-->
       <section class="employees section-title">
-        <h2 class="employees-title">Наша команда</h2>
+        <div class="conteiner">
+         <h2 class="employees-title">Наша команда</h2>
 
-        <ul class="employees-list list">
+         <ul class="employees-list list">
           <li class="employees-item">
             <img
               src="./images/igorproductdesigner.jpg"
@@ -191,38 +194,41 @@
             <h3 class="employees-name">Михаил Ермаков</h3>
             <p class="employees-position">UI Designer</p>
           </li>
-        </ul>
+         </ul>
+        <div class="conteiner">
       </section>
     </main>
 
     <!--FOOTER-->
     <footer class="footer">
-      <a class="logo link" href="/"
+      <div class="conteiner">
+       <a class="logo link" href="/"
         >Web<span class="footer-logo-accent">Studio</span></a
-      >
+       >
 
-      <address class="footer-addr">
-        <ul class="footer-addr-list list">
-          <li>
-            <a
+        <address class="footer-addr">
+          <ul class="footer-addr-list list">
+            <li>
+              <a
               class="footer-addr-link link"
               href="https://goo.gl/maps/nk7uNHykZLFtEG5r5"
               target="_blank"
               >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-mail-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-phone-link link" href="tel:+380961111111"
+              >
+            </li>
+            <li>
+              <a class="footer-mail-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-phone-link link" href="tel:+380961111111"
               >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
    
   </body>
