--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-      <!--Шапка-->
+      <!--HEADER-->
   
   <header class="header">
     <div class="conteiner header-container"> 
@@ -123,21 +123,21 @@
         <div class="conteiner">
          <h2 class="work-title section-title">Чем мы занимаемся</h2>
          <ul class="work-list list">
-          <li>
+          <li class="work-item">
             <img
               src="./images/sevicepc.jpg"
               alt="Использование современной компьютерной техники"
               width="370"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/servicetlf.jpg"
               alt="Использование современного телефона для рассылки сообщений через компьютер"
               width="370"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/servicecolors.jpg"
               alt="Круг с цветовым спектром"
