--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
          <ul class="employees-list list">
           <li class="employees-item">
-            <img
+            <img class="employees-img"
               src="./images/igorproductdesigner.jpg"
               alt="Изображен Игорь Демьяненко, дизайнер, брюнет с бородой в корчневой рубашке и очках"
               width="270"
@@ -165,7 +165,7 @@
             <p class="employees-position">Product Designer</p>
           </li>
           <li class="employees-item">
-            <img
+            <img class="employees-img"
               src="./images/olgafrontenddeveloper.jpg"
               alt="Изображена Ольга Репина, фронтенд-разработчик, блондинка в очках"
               width="270"
@@ -175,7 +175,7 @@
             <p class="employees-position">Frontend Developer</p>
           </li>
           <li class="employees-item">
-            <img
+            <img class="employees-img"
               src="./images/nikolaymarketing.jpg"
               alt="Изображен Николай Тарасов, сотрудник отдела маркетинга, молодой человек с бородой в белой рубашке"
               width="270"
@@ -185,7 +185,7 @@
             <p class="employees-position">Marketing</p>
           </li>
           <li class="employees-item">
-            <img
+            <img class="employees-img"
               src="./images/michaildesigner.jpg"
               alt="Изображен Михаил Ермаков, дизайнер, молодой человек с бородой в черной футболке"
               width="270"
