--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <!--FOOTER-->
     <footer class="footer">
       <div class="conteiner">
-       <a class="logo link" href="/"
+       <a class="link footer-logo" href="/"
         >Web<span class="footer-logo-accent">Studio</span></a
        >
 
