--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <address class="footer-addr">
           <ul class="footer-addr-list list">
-            <li>
+            <li class="footer-item">
               <a
               class="footer-addr-link link"
               href="https://goo.gl/maps/nk7uNHykZLFtEG5r5"
@@ -216,12 +216,12 @@
               >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-mail-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-phone-link link" href="tel:+380961111111"
               >+38 096 111 11 11</a
               >
