--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,12 @@
   
           <ul class="header-nav list">
             <li class="header-item">
-              <a class="header-nav-link link header-nav-activ" href="">Студия</a>
+              <a class="header-nav-link link" href="./index.html">Студия</a>
             </li>
             <li class="header-item">
               <a
-                class="header-nav-link link"
-                href="./portfolio.html"
+                class="header-nav-link link header-nav-activ"
+                href=""
                 target="_self"
                 >Портфолио</a
               >
@@ -64,21 +64,22 @@
 
     <main>
       <section class="portfolio">
+        <div class="conteiner">
 
         <!--Скрыла название заголовка секции с помощью hidden-->
-        <h1 class="portfolio-headline" hidden>Примеры наших работ</h1>
+        <h1 class="portfolio-headline visually-hidden">Примеры наших работ</h1>
         <ul class="portfolio-list list">
-          <li><button class="portfolio-button" type="button">Все</button></li>
-          <li>
+          <li class="portfolio-item"><button class="portfolio-button button-active" type="button">Все</button></li>
+          <li class="portfolio-item">
             <button class="portfolio-button" type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="portfolio-item">
             <button class="portfolio-button" type="button">Приложения</button>
           </li>
-          <li>
+          <li class="portfolio-item">
             <button class="portfolio-button" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="portfolio-item">
             <button class="portfolio-button" type="button">Маркетинг</button>
           </li>
         </ul>
@@ -93,8 +94,10 @@
                 alt="Открытый ноутбук с тремя картинками людей"
                 width="370"
               />
-              <h2 class="cards-headline">Технокряк</h2>
-              <p class="cards-text">Веб-сайт</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">Технокряк</h2>
+                <p class="cards-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <!--Портфолио Карточка 2 Баскетбол-->
@@ -105,10 +108,12 @@
                 alt="Два баскетболиста в прыжке с мячом"
                 width="370"
               />
-              <h2 class="cards-headline">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="cards-text">Дизайн</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="cards-text">Дизайн</p>
+              </div>
             </a>
           </li>
           <!--Портфолио Карточка 3 Ресторан-->
@@ -119,10 +124,12 @@
                 alt="Название ресторана на фоне акулы"
                 width="370"
               />
-              <h2 class="cards-headline">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="cards-text">Приложение</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="cards-text">Приложение</p>
+              </div>
             </a>
           </li>
           <!--Портфолио Карточка 4 Наушники-->
@@ -133,10 +140,12 @@
                 alt="Черные большие наушники"
                 width="370"
               />
-              <h2 class="cards-headline">
-                Проект <span lang="en">Prime</span>
-              </h2>
-              <p class="cards-text">Маркетинг</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  Проект <span lang="en">Prime</span>
+                </h2>
+                <p class="cards-text">Маркетинг</p>
+              </div>
             </a>
           </li>
           <!--Портфолио Карточка 5 Боксы-->
@@ -147,10 +156,12 @@
                 alt="<Белый большой бокс и коричневый бокс поменьше>"
                 width="370"
               />
-              <h2 class="cards-headline">
-                Проект <span lang="en">Boxes</span>
-              </h2>
-              <p class="cards-text">Приложение</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  Проект <span lang="en">Boxes</span>
+                </h2>
+                <p class="cards-text">Приложение</p>
+              </div>
             </a>
           </li>
           <!--Портфолио Карточка 6 Моноблок-->
@@ -161,10 +172,12 @@
                 alt="<Большой моноблок с изображением карт на экране>"
                 width="370"
               />
-              <h2 class="cards-headline">
-                <span lang="en">Inspiration has no Borders</span>
-              </h2>
-              <p class="cards-text">Веб-сайт</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  <span lang="en">Inspiration has no Borders</span>
+                </h2>
+                <p class="cards-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <!--Портфолио Карточка 7 Журнал-->
@@ -175,10 +188,13 @@
                 alt="Открытый глянцевый журнал"
                 width="370"
               />
-              <h2 class="cards-headline">
-                Издание <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="cards-text">Дизайн</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  Издание <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="cards-text">Дизайн</p>
+              </div>
+              
             </a>
           </li>
           <!--Портфолио Карточка 8 LAB-->
@@ -189,9 +205,12 @@
                 alt="Бирка с рекламой"
                 width="370"
               />
-              <h2 class="cards-headline">Проект <span lang="en">LAB</span></h2>
+              <div class="cards-sign">
+                <h2 class="cards-headline">Проект <span lang="en">LAB</span></h2>
               <p class="cards-text">Маркетинг</p></a
             >
+              </div>
+              
           </li>
           <!--Портфолио Карточка 9 Business-->
           <li class="cards-item">
@@ -208,6 +227,7 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
@@ -220,7 +240,7 @@
 
         <address class="footer-addr">
           <ul class="footer-addr-list list">
-            <li>
+            <li class="footer-item">
               <a
               class="footer-addr-link link"
               href="https://goo.gl/maps/nk7uNHykZLFtEG5r5"
@@ -228,12 +248,12 @@
               >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-mail-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a class="footer-phone-link link" href="tel:+380961111111"
               >+38 096 111 11 11</a
               >
