--- a/portfolio.html
+++ b/portfolio.html
@@ -220,10 +220,12 @@
                 alt="Открытый ноутбук, на нем печатают"
                 width="370"
               />
-              <h2 class="cards-headline">
-                <span lang="en">Growing Business</span>
-              </h2>
-              <p class="cards-text">Приложение</p>
+              <div class="cards-sign">
+                <h2 class="cards-headline">
+                  <span lang="en">Growing Business</span>
+                </h2>
+                <p class="cards-text">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
