paddings 94 to sections

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main>
       <!--Эффективные решения для вашего бизнеса-->
      
-      <section class="hero">
+      <section class="section hero">
        <div class="conteiner">
         <h1 class="hero-title section-title">
           Эффективные решения <br />
@@ -80,7 +80,7 @@
 
       <!--Внимание к деталям\Пунктуальность\Планирование\Современные технологии
         Наши преимущества\-->
-      <section class="benefits">
+      <section class="section benefits">
         <div class="conteiner">
         <!--Скрыла название заголовка секции с помощью hidden-->
         <h2 class="benefits-title section-title visually-hidden">Наши преимущества</h2>
@@ -119,7 +119,7 @@
       </section>
 
       <!--Чем мы занимаемся-->
-      <section class="work">
+      <section class="section work">
         <div class="conteiner">
          <h2 class="work-title section-title">Чем мы занимаемся</h2>
          <ul class="work-list list">
@@ -149,7 +149,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="employees section-title">
+      <section class="section employees section-title">
         <div class="conteiner">
          <h2 class="employees-title">Наша команда</h2>
 
