--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
     </header>
 
     <main>
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="conteiner">
 
         <!--Скрыла название заголовка секции с помощью hidden-->
