--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <p class="employees-position">UI Designer</p>
           </li>
          </ul>
-        <div class="conteiner">
+        </div>
       </section>
     </main>
 
