--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,6 @@
                 </h2>
                 <p class="cards-text">Дизайн</p>
               </div>
-              
             </a>
           </li>
           <!--Портфолио Карточка 8 LAB-->
@@ -207,10 +206,9 @@
               />
               <div class="cards-sign">
                 <h2 class="cards-headline">Проект <span lang="en">LAB</span></h2>
-              <p class="cards-text">Маркетинг</p></a
-            >
+              <p class="cards-text">Маркетинг</p>
               </div>
-              
+            </a> 
           </li>
           <!--Портфолио Карточка 9 Business-->
           <li class="cards-item">
