--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   
 
     <main>
-      <!--Эффективные решения для вашего бизнеса-->
+      <!-- Эффективные решения для вашего бизнеса-->
      
-      <section class="section hero">
+      <section class="hero">
        <div class="conteiner">
         <h1 class="hero-title section-title">
           Эффективные решения <br />
@@ -78,12 +78,12 @@
       </section>
      
 
-      <!--Внимание к деталям\Пунктуальность\Планирование\Современные технологии
+      <!--benefits Внимание к деталям\Пунктуальность\Планирование\Современные технологии
         Наши преимущества\-->
-      <section class="section benefits">
+       <section class="section"> <!--benefits-->
         <div class="conteiner">
         <!--Скрыла название заголовка секции с помощью hidden-->
-        <h2 class="benefits-title section-title visually-hidden">Наши преимущества</h2>
+        <h2 class="visually-hidden">Наши преимущества</h2>
 
         <ul class="benefits-list list">
           <li class="benefits-item">
@@ -122,7 +122,7 @@
       <section class="section work">
         <div class="conteiner">
          <h2 class="work-title section-title">Чем мы занимаемся</h2>
-         <ul class="work-list list">
+         <ul class="work-list">
           <li class="work-item">
             <img
               src="./images/sevicepc.jpg"
@@ -149,7 +149,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="section employees section-title">
+      <section class="section employees">
         <div class="conteiner">
          <h2 class="employees-title">Наша команда</h2>
 
@@ -160,19 +160,23 @@
               alt="Изображен Игорь Демьяненко, дизайнер, брюнет с бородой в корчневой рубашке и очках"
               width="270"
             />
-
-            <h3 class="employees-name">Игорь Демьяненко</h3>
-            <p class="employees-position">Product Designer</p>
+            <div class="employees-img-name">
+              <h3 class="employees-name">Игорь Демьяненко</h3>
+              <p class="employees-position">Product Designer</p>
+            </div>
           </li>
+
           <li class="employees-item">
             <img class="employees-img"
               src="./images/olgafrontenddeveloper.jpg"
               alt="Изображена Ольга Репина, фронтенд-разработчик, блондинка в очках"
               width="270"
             />
+            <div class="employees-img-name">
+              <h3 class="employees-name">Ольга Репина</h3>
+              <p class="employees-position">Frontend Developer</p>
+            </div>
 
-            <h3 class="employees-name">Ольга Репина</h3>
-            <p class="employees-position">Frontend Developer</p>
           </li>
           <li class="employees-item">
             <img class="employees-img"
@@ -180,9 +184,11 @@
               alt="Изображен Николай Тарасов, сотрудник отдела маркетинга, молодой человек с бородой в белой рубашке"
               width="270"
             />
+            <div class="employees-img-name">
+              <h3 class="employees-name">Николай Тарасов</h3>
+              <p class="employees-position">Marketing</p>
+            </div>
 
-            <h3 class="employees-name">Николай Тарасов</h3>
-            <p class="employees-position">Marketing</p>
           </li>
           <li class="employees-item">
             <img class="employees-img"
@@ -190,9 +196,10 @@
               alt="Изображен Михаил Ермаков, дизайнер, молодой человек с бородой в черной футболке"
               width="270"
             />
-
-            <h3 class="employees-name">Михаил Ермаков</h3>
-            <p class="employees-position">UI Designer</p>
+            <div class="employees-img-name">
+              <h3 class="employees-name">Михаил Ермаков</h3>
+              <p class="employees-position">UI Designer</p>
+            </div>
           </li>
          </ul>
         </div>
