--- a/portfolio.html
+++ b/portfolio.html
@@ -63,12 +63,12 @@
     </header>
 
     <main>
-      <section class="section portfolio">
+      <section class="section">
         <div class="conteiner">
 
         <!--Скрыла название заголовка секции с помощью hidden-->
-        <h1 class="portfolio-headline visually-hidden">Примеры наших работ</h1>
-        <ul class="portfolio-list list">
+        <h1 class="visually-hidden">Примеры наших работ</h1>
+        <ul class="portfolio-list">
           <li class="portfolio-item"><button class="portfolio-button button-active" type="button">Все</button></li>
           <li class="portfolio-item">
             <button class="portfolio-button" type="button">Веб-сайты</button>
