delete last padding left from list

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >Web<span class="header-logo-accent">Studio</span></a
         >
 
-        <ul class="header-nav list">
+        <ul class="header-nav">
           <li class="header-item">
             <a class="header-nav-link link header-nav-activ" href="">Студия</a>
           </li>
@@ -47,7 +47,7 @@
       </nav>
       <!-- Авторизация -->
       
-      <ul class="header-contact list">
+      <ul class="header-contact">
         <li class="header-contact-item">
           <a class="header-contact-link link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
