--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             >Web<span class="header-logo-accent">Studio</span></a
           >
   
-          <ul class="header-nav list">
+          <ul class="header-nav">
             <li class="header-item">
               <a class="header-nav-link link" href="./index.html">Студия</a>
             </li>
@@ -46,7 +46,7 @@
         </nav>
         <!-- Авторизация -->
         
-        <ul class="header-contact list">
+        <ul class="header-contact">
           <li class="header-contact-item">
             <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
