delete list from all project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
       <!--HEADER-->
-   
+  
   <header class="header">
     <div class="conteiner header-container"> 
       <nav class="header-navigation">
@@ -85,7 +85,7 @@
         <!--Скрыла название заголовка секции с помощью hidden-->
         <h2 class="visually-hidden">Наши преимущества</h2>
 
-        <ul class="benefits-list list">
+        <ul class="benefits-list">
           <li class="benefits-item">
             <h3 class="benefits-title">Внимание к деталям</h3>
             <p class="benefits-text">
@@ -153,7 +153,7 @@
         <div class="conteiner">
          <h2 class="employees-title">Наша команда</h2>
 
-         <ul class="employees-list list">
+         <ul class="employees-list">
           <li class="employees-item">
             <img class="employees-img"
               src="./images/igorproductdesigner.jpg"
@@ -214,7 +214,7 @@
        >
 
         <address class="footer-addr">
-          <ul class="footer-addr-list list">
+          <ul class="footer-addr-list">
             <li class="footer-item">
               <a
               class="footer-addr-link link"
