--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <a href="/" class="logo link"
             >Web<span class="header-logo-accent">Studio</span></a
           >
-   
+  
           <ul class="header-nav">
             <li class="header-item">
               <a class="header-nav-link link" href="./index.html">Студия</a>
@@ -85,7 +85,7 @@
         </ul>
         <!--КАРТОЧКИ-->
 
-        <ul class="cards list">
+        <ul class="cards">
           <!--Портфолио Карточка 1 Ноутбук-->
           <li class="cards-item">
             <a class="cards-link link" href=""
@@ -239,7 +239,7 @@
        >
 
         <address class="footer-addr">
-          <ul class="footer-addr-list list">
+          <ul class="footer-addr-list">
             <li class="footer-item">
               <a
               class="footer-addr-link link"
